--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,24 @@
   animation: spinner 0.7s linear infinite;
 }
 
+/* spinner 2 */
+.spinner-2:before{
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top-color: coral;
+  border-bottom-color: coral;
+  animation: spinner 0.7s ease infinite;
+}
+
 @keyframes spinner{
   to {
     transform: rotate(360deg);
